platform/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: homelab-tunnel.dubass83.xyz
    external-dns.alpha.kubernetes.io/cloudflare-proxied: true
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth.dubass83.xyz/oauth2/sign_in?rd=http://\$host\$request_uri"
spec:
  ingressClassName: nginx
  rules:
    - host: &host tekton.dubass83.xyz
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: tekton-tls-certificate
